@@ -65,7 +65,7 @@ class RemoteGlobalCollectTest < Test::Unit::TestCase
   def test_failed_capture
     response = @gateway.capture(@amount, '123', @options)
     assert_failure response
-    assert_equal 'INVALID_PAYMENT_ID', response.message
+    assert_equal 'UNKNOWN_PAYMENT_ID', response.message
   end
 
   # Because payments are not fully authorized immediately, refunds can only be
@@ -89,7 +89,7 @@ class RemoteGlobalCollectTest < Test::Unit::TestCase
   def test_failed_refund
     response = @gateway.refund(@amount, '123')
     assert_failure response
-    assert_equal 'INVALID_PAYMENT_ID', response.message
+    assert_equal 'UNKNOWN_PAYMENT_ID', response.message
   end
 
   def test_successful_void
@@ -104,7 +104,7 @@ class RemoteGlobalCollectTest < Test::Unit::TestCase
   def test_failed_void
     response = @gateway.void('123')
     assert_failure response
-    assert_equal 'INVALID_PAYMENT_ID', response.message
+    assert_equal 'UNKNOWN_PAYMENT_ID', response.message
   end
 
   def test_successful_verify
